<resources>
    <string name="app_name">CarAssistant</string>
    <string name="connection_error">Connect to Internet</string>
    <string name="mileage_error">Your car mileage is lower then previous. Check if your data is correct</string>
    <string name="edit_label_current_mileage">Current mileage:</string>
    <string name="edit_label_fueling">Fueling:</string>
    <string name="edit_label_current_fuel">Current fuel:</string>
    <string name="edit_label_oil_filled">Oil filled:</string>
    <string name="edit_label_comment">Comment:</string>
    <string name="button_label_add_new_stats">Add new stats</string>
    <string name="application_name">CarAssistant</string>
    <string name="fuel_consumption_after_last">Fuel consumption after last fueling</string>
    <string name="fuel_consumption">Total fuel consumption</string>
    <string name="reset_stats">Reset stats</string>
    <string name="check_version">Check version</string>
    <string name="cost">Cost:</string>
    <string name="category">Category:</string>
    <string name="date">Date:</string>
    <string name="comment">Comment</string>
    <string name="total_cost">Total cost:</string>
    <string name="fueling">Fueling</string>
    <string name="oilfilled">OilFilled</string>
    <string name="save_card">Save card</string>
    <string name="take_business_card">Take business card</string>
    <string name="name">Name:</string>
    <string name="add_new_costs">Add new costs</string>
    <string name="weather_now">Weather now</string>
    <string name="_5_usd">5 USD</string>
    <string name="carassistant">CarAssistant</string>
    <string name="swipe_to_change">Swipe to change</string>
    <string name="add_car_stats">Add car stats</string>
    <string name="add_new_cost">Add new cost</string>
    <string name="search_car_stats">Search car stats</string>
    <string name="search_car_costs">Search car costs</string>
    <string name="search_photo">Search photo</string>
    <string name="search_business_cards">Search business cards</string>
    <string name="communicate">Communicate</string>
    <string name="settings">Settings</string>
    <string name="total_fuel_consumption">Total fuel consumption</string>
    <string name="new_category">New category</string>
    <string name="measurement_blank">%1$s %2$s</string>
    <string name="settings_beta">Settings(Beta)</string>
    <string name="courses_in_next_versions">Courses in next versions</string>
</resources>
