<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="@dimen/main_app_margin"
        android:layout_marginLeft="@dimen/main_app_margin"
        android:layout_marginRight="@dimen/main_app_margin">

        <TextView
            android:id="@+id/txtMileage"
            style="@style/app_inscriptio_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_label_current_mileage" />

        <TextView
            android:id="@+id/txtFueling"
            style="@style/app_inscriptio_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_label_fueling" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_marginLeft="@dimen/main_app_margin"
        android:layout_marginRight="@dimen/main_app_margin">

        <EditText
            android:id="@+id/editMileage"
            style="@style/app_edit_text_style"
            android:layout_weight="1"
            android:imeOptions="actionNext"
            android:inputType="numberSigned"
            android:nextFocusRight="@+id/editFueling" />

        <EditText
            android:id="@+id/editFueling"
            style="@style/app_edit_text_style"
            android:layout_weight="1"
            android:imeOptions="actionNext"
            android:inputType="numberSigned"
            android:nextFocusRight="@+id/editCurrentFuel" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line2"
        android:layout_marginLeft="@dimen/main_app_margin"
        android:layout_marginRight="@dimen/main_app_margin">

        <TextView
            android:id="@+id/txtCurrentFuel"
            style="@style/app_inscriptio_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_label_current_fuel" />

        <TextView
            android:id="@+id/txtOilFilled"
            style="@style/app_inscriptio_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_label_oil_filled" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line3"
        android:layout_marginLeft="@dimen/main_app_margin"
        android:layout_marginRight="@dimen/main_app_margin">

        <EditText
            android:id="@+id/editCurrentFuel"
            style="@style/app_edit_text_style"
            android:layout_weight="1"
            android:imeOptions="actionNext"
            android:inputType="numberSigned"
            android:nextFocusRight="@+id/editOilFilled" />

        <EditText
            android:id="@+id/editOilFilled"
            style="@style/app_edit_text_style"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:inputType="numberSigned" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineComment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lineButton"
        android:layout_below="@+id/line4"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/main_app_margin"
        android:layout_marginRight="@dimen/main_app_margin">

        <TextView
            style="@style/app_inscriptio_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_label_comment" />

        <EditText
            android:id="@+id/editComment"
            style="@style/app_edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="textLongMessage"
            android:lines="5" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingTop="@dimen/main_app_margin"
        android:layout_marginBottom="@dimen/main_app_margin"
        android:layout_marginLeft="@dimen/main_app_margin"
        android:layout_marginRight="@dimen/main_app_margin">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/main_app_margin"
            android:onClick="onAddNewStats"
            android:text="@string/button_label_add_new_stats"
            style="@style/app_button_style" />

    </LinearLayout>
</RelativeLayout>