<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/linePhotoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="@dimen/main_app_margin"
        android:orientation="horizontal">

        <TextView
            style="@style/app_inscriptio_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/editPhotoName"
            style="@style/app_edit_text_style"
            android:layout_width="match_parent" />
    </LinearLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSaveCard"
        android:layout_below="@+id/linePhotoName">

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/linePhoto"
            android:layout_width="match_parent"
            app:layout_heightPercent="70%">

            <ImageView
                android:id="@+id/imgBusinessCard"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/main_app_margin"
                android:scaleType="fitXY"
                app:layout_widthPercent="50%" />

        </android.support.percent.PercentRelativeLayout>

        <EditText
            android:id="@+id/editPhotoComment"
            style="@style/app_edit_text_style"
            android:layout_below="@+id/linePhoto"
            app:layout_heightPercent="30%" />

    </android.support.percent.PercentRelativeLayout>

    <Button
        android:id="@+id/btnSaveCard"
        style="@style/app_button_style"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/main_app_margin"
        android:onClick="onAddNewCard"
        android:text="@string/save_card" />

    <Button
        android:id="@+id/btnTakeBusinessCard"
        style="@style/app_button_style"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/main_app_margin"
        android:text="@string/take_business_card"
        android:textSize="18sp" />

</RelativeLayout>